manifest/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: currently-working-on
  namespace: currently-working-on
  labels:
    app: currently-working-on
spec:
  replicas: 3
  selector:
    matchLabels:
      app: currently-working-on
  template:
    metadata:
      labels:
        app: currently-working-on
    spec:
      containers:
        - name: currently-working-on
          image: "trueberryless/currently-working-on:main-f8984e0b6438136993d57aaf3e81a6fca7cbd99f"
          imagePullPolicy: Always
          ports:
            - containerPort: 3000
