manifest/service.yaml
apiVersion: v1
kind: Service
metadata:
    name: currently-working-on
    namespace: currently-working-on
    annotations:
        cert-manager.io/issuer: acme-issuer
spec:
    selector:
        app: currently-working-on
    ports:
        - name: http
          port: 80
          targetPort: 3000
